--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@
 ::-webkit-scrollbar-thumb:hover {
   background-color: white;
 }
+
 /* ------------------------ landing section styling ---------------------------*/
 @keyframes fadeInFromAbove {
   from {color: rgba(255, 255, 255, 0); transform: translateY(-100%);}
@@ -83,6 +84,23 @@
   animation-duration: 1.5s;
   animation-fill-mode: forwards;
 }
+
+/* ============Home page Landing Styling Change for Small Screens============= */
+@media only screen and (max-width: 1217px){
+  #hey {
+    font-size: 160px;
+  }
+
+  .landing {
+    background-size: auto 100vh;
+  }
+
+  .sub-landing-message {
+    font-size: 20px;
+  }
+}
+/* ================End small screen change===================================== */
+
 /* ----------------------------------------------------------------------------- */
 
 
@@ -306,6 +324,14 @@
   background-repeat: no-repeat;
 }
 
+
+/* =================BACKGROUND FOR SMALL SCREEN================= */
+@media only screen and (max-width: 1217px){
+  .home{
+    background-size: auto 100vh;
+}
+}
+
 .home-main-content {
   grid-area: main;
   border-radius: 10px;
@@ -464,6 +490,11 @@ margin: 20px;
   width: 40%;
   height: auto;
   margin: 10px;
+}
+
+.project-name-and-lang-icon{
+  display: grid;
+  grid-template-columns: 1fr auto;
 }
 
 
@@ -681,6 +712,13 @@ margin: 20px;
   background-size: 100vw auto;
   background-position: center center;
   background-attachment: fixed;
+  padding-top: 40px; /*replaces Spacer*/
+}
+
+@media only screen and (max-width: 1217px){
+  .home-footer-background{
+    background-size: auto 100vh;
+}
 }
 
 .about-footer-background {
@@ -702,7 +740,5 @@ margin: 20px;
   margin: auto;
   margin-top: 30px;
 }
-
-
 
 
