--- a/src/App.css
+++ b/src/App.css
@@ -525,144 +525,58 @@ margin: 20px;
   overflow-x: auto;
 }
 
-.sar {
+.photo-item {
   display: inline-block;
   height: 600px;
   width: 800px;
+  background-color: white;
+  background-size: 800px auto;
+  background-position: center center;
+  margin: 20px;
+  margin-top: 60px;
+  margin-bottom: 60px;
+  border-radius: 20px;
+  z-index: 1;
+}
+
+#sar {
   background-image: url("./Images/Photography/Sarra.JPG");
-  background-size: 800px auto;
-  background-position: center center;
-  margin: 20px;
-  margin-top: 60px;
-  margin-bottom: 60px;
-  border-radius: 20px;
-  z-index: 1;
 }
 
-.nep {
-  display: inline-block;
-  height: 600px;
-  width: 800px;
+#nep {
   background-image: url("./Images/Photography/NepVen.JPG");
-  background-size: 800px auto;
-  background-position: center center;
-  margin: 20px;
-  margin-top: 60px;
-  margin-bottom: 60px;
-  border-radius: 20px;
-  z-index: 1;
 }
 
-.feather {
-  display: inline-block;
-  height: 600px;
-  width: 800px;
+#feather {
   background-image: url("./Images/Photography/BranchFeather.JPG");
-  background-size: 800px auto;
-  background-position: center center;
-  margin: 20px;
-  margin-top: 60px;
-  margin-bottom: 60px;
-  border-radius: 20px;
-  z-index: 1;
 }
 
-.clouds {
-  display: inline-block;
-  height: 600px;
-  width: 800px;
+#clouds {
   background-image: url("./Images/Photography/Clouds.JPG");
-  background-size: 800px auto;
-  background-position: center center;
-  margin: 20px;
-  margin-top: 60px;
-  margin-bottom: 60px;
-  border-radius: 20px;
-  z-index: 1;
 }
 
-.moon {
-  display: inline-block;
-  height: 600px;
-  width: 800px;
+#moon {
   background-image: url("./Images/Photography/DayMoon.JPG");
-  background-size: 800px auto;
-  background-position: center center;
-  margin: 20px;
-  margin-top: 60px;
-  margin-bottom: 60px;
-  border-radius: 20px;
-  z-index: 1;
 }
 
-.botanic {
-  display: inline-block;
-  height: 600px;
-  width: 800px;
+#botanic {
   background-image: url("./Images/Photography/BotanicGarden.JPG");
-  background-size: 800px auto;
-  background-position: center center;
-  margin: 20px;
-  margin-top: 60px;
-  margin-bottom: 60px;
-  border-radius: 20px;
-  z-index: 1;
 }
 
-.dionaea {
-  display: inline-block;
-  height: 600px;
-  width: 800px;
+#dionaea {
   background-image: url("./Images/Photography/Dionaea.JPG");
-  background-size: 800px auto;
-  background-position: center center;
-  margin: 20px;
-  margin-top: 60px;
-  margin-bottom: 60px;
-  border-radius: 20px;
-  z-index: 1;
 }
 
-.goldenburman {
-  display: inline-block;
-  height: 600px;
-  width: 800px;
+#goldenburman {
   background-image: url("./Images/Photography/GoldenBurmannii.JPG");
-  background-size: 800px auto;
-  background-position: center center;
-  margin: 20px;
-  margin-top: 60px;
-  margin-bottom: 60px;
-  border-radius: 20px;
-  z-index: 1;
 }
 
-.burmancover {
-  display: inline-block;
-  height: 600px;
-  width: 800px;
+#burmancover {
   background-image: url("./Images/Photography/BurmanniiCover.JPG");
-  background-size: 800px auto;
-  background-position: center center;
-  margin: 20px;
-  margin-top: 60px;
-  margin-bottom: 60px;
-  border-radius: 20px;
-  z-index: 1;
 }
 
-.raintree {
-  display: inline-block;
-  height: 600px;
-  width: 800px;
+#raintree {
   background-image: url("./Images/Photography/RainTree.JPG");
-  background-size: 800px auto;
-  background-position: center center;
-  margin: 20px;
-  margin-top: 60px;
-  margin-bottom: 60px;
-  border-radius: 20px;
-  z-index: 1;
 }
 /* .sar:hover, .nep:hover, .feather:hover, .moon:hover, .clouds:hover {
   transform: scale(1.2, 1.2);
